--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -4,7 +4,7 @@ trigger:
 steps:
 - task: Docker@2
   inputs:
-    containerRegistry: 'DG Modules Container Registry'
+    containerRegistry: 'DG ITOps Public Container Registry'
     repository: 'planetexpress/jinja2-templating'
     command: 'buildAndPush'
     Dockerfile: 'Dockerfile'
